[package]
name = "rust-blackjack"
version = "0.1.0"
authors = ["Delfi Sehidic <prskati@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20.0"
strum_macros = "0.20"
rand = "0.7.3"